# MIRROR-Pipeline

./: .ENV_example  .gitignore  README.md  config.yaml  config.yml  config_txt.yaml  environment.yml  launch.sh  overfit_test_config.yaml  pyproject.toml  pyrightconfig.json  requirements.txt  submit_test_config.yaml
.claude/: .nfs91762c4f7cbc385300010e41
.github/workflows/: ai-review.yml  overfit-pr.yml  submission-time-pr.yml  sync-docs-to-wiki.yml  typecheck-pr.yml
configs/demo_configs/: demo_fit_config.yaml  demo_format_config.yaml  demo_infer_config.yaml  demo_preprocess_config.yaml
docs/: config-example.md  home.md  mirror onboarding.md
docs/folder structures/: mirror_data.md
docs/mirror onboarding/: config-example.md  mirror onboarding.md
docs/specialization/: specialization.md
docs/stack breakdown/: DeepSpeed.md  FSDP.md  FairScale.md  FlashAttention.md  Megatron-LM.md  Nanotron.md  NeMo.md  Pipeline Parallelism.md  SDPA.md  Tensor Parallel.md  Transformer Engine.md  Triton.md  basic architecture notes.md  big stack breakdowns.md  mirror-data.md
scripts/: benchmark_launch.py  benchmark_run.py  check_overfit.py  check_submission_time.py  smoke_llama.py
scripts/benchmark/: benchmark_run.py
scripts/train-time-benchmark/: benchmark_launch.py  benchmark_run.py  benchmark_visualize.py
src/: jupyter_template.ipynb  launch_jupyter.py  main.py  run.py  trainer.py
src/callbacks/: callback.py  print_step_callback.py
src/datasets/: mirror_dataset.py  placeholder_dataset.py  preprocessed_dataset.py
src/mirror/: __init__.py  benchmark_configs.py  (+22 more)
(+92 files in other folders)
